--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-builder": "^20.39.0"
   },
   "dependencies": {
+    "bootstrap-css-only": "^4.3.1",
     "electron-is-dev": "^1.0.1",
     "electron-updater": "^4.0.6"
   }
