--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "bootstrap-css-only": "^4.3.1",
     "electron-is-dev": "^1.0.1",
     "electron-updater": "^4.0.6",
-    "node-pty": "^0.8.1",
-    "xterm": "^3.12.0",
     "markdown-it": "^8.4.2",
-    "markdown-it-attrs": "^2.3.3"
+    "markdown-it-attrs": "^2.3.3",
+    "node-pty": "^0.8.1",
+    "xterm": "^3.14.1"
   },
   "files": [
     "ReleaseNotes.md"
